--- a/README
+++ b/README
@@ -1,13 +1,15 @@
 # clj-metrics
 
-FIXME: write description
+Clojure static source code analysis tool.
 
 ## Usage
 
-FIXME: write
+lein run clj-metrics [path]
+
+If omitted path defaults to the current directory.
 
 ## License
 
-Copyright (C) 2011 FIXME
+Copyright (C) 2011
 
 Distributed under the Eclipse Public License, the same as Clojure.
